--- a/style/abbas.css
+++ b/style/abbas.css
@@ -191,3 +191,80 @@
     height: 105px;
     object-fit: cover;
 }
+.main-header .container .menu{
+    float: left;
+    padding: 5px;
+}
+  
+.main-header .container .menu .nav-mine ul li{
+    display: inline-block;
+    margin: 5px;
+}
+  
+  
+.main-header .container .menu .nav-mine ul li a{
+    color: #fff;
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 3px;
+}
+.main-header .container .menu .nav-mine ul li a:hover{
+    color: gray;
+    background: #fff;
+}
+.main-header .container .logo{
+    float: right;
+    padding: 1px;
+}
+  .main-header .container .logo img{
+    border-radius: 5px;
+}
+.small-text {
+    margin: auto auto;
+    padding: auto;
+    width: 79.2%;
+    height: 34vh;
+    padding: 200px;
+    display: inline-block;
+    line-height: 2;
+    background-size: cover;
+    background-image: url(../img/abbas/goldasht.jpg);
+    background-position: 1.5px -35rem;
+}
+.small-text  .text-about{
+    font-size: 40px;
+}
+.small-text a{
+    font-size: 30px;
+    padding: 5px;
+    color: #Fff;
+    background-color: gray;
+    border-radius: 5px;
+    text-align: center;
+}
+.small-text a:hover{
+    font-size: 35px;
+    color: chocolate;
+    }
+.container{
+    width: 100%;
+    background-color: gray;
+    height: 46px;
+    padding: 20px;
+    position: fixed;
+}
+.test{
+  margin: auto;
+  padding: 20px;
+  text-align: justify;
+  border: 1px solid black;
+  border-radius: 5px;
+  line-height: 2;
+  height: auto;
+  width: 39rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.test h1{
+    text-align: center;
+}
