--- a/style/abbas.css
+++ b/style/abbas.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: antiquewhite;
+}
 .skils{
     max-width: 10000px;
     margin: 0 auto;
