--- a/style/main.css
+++ b/style/main.css
@@ -3,56 +3,46 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 footer {
     background-color: bisque;
     padding: 1rem;
 }
-
 .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 .logo-title {
     display: flex;
     align-items: center;
 }
-
 .logo-title img {
     width: 9rem;
 }
-
 .logo-title p {
     margin-left: 10px;
     color: darkslategray;
     font-size: 1rem;
     font-family: 'Courier New', Courier, monospace;
 }
-
 .social-links {
     display: flex;
     gap: 15px;
 }
-
 .social-links a {
     color: darkslategray;
     font-size: 24px;
     transition: color 0.3s ease;
 }
-
 .social-links a:hover {
     color: #007bff;
 }
-
 .copyright {
     text-align: center;
     margin-top: 1rem;
     color: darkslategray;
     font-size: 0.9rem;
 }
-
 @media (max-width: 768px) {
     .footer-content {
         flex-direction: column;
@@ -61,8 +51,98 @@ footer {
     .social-links {
         margin-top: 15px;
     }
-
     .copyright {
         margin-top: 1rem;
     }
 }
+*{
+    margin:0;
+    padding:0;
+    }
+    body{
+    background-color:gray;
+    }
+    .main{
+    width:100%;
+    height:100%;
+    border:1px solid red;
+    padding :1px;
+    }
+   
+   
+    .team{
+    width:100%;
+    height:100%;
+    padding :1px;
+    }
+   
+    .team h1,.team p{
+    text-align:center;
+    margin:50px auto 5px;
+    }
+.team h1 u {
+        display:inline-block;
+        text-align:center;
+        margin: 50px auto;
+        color: #f7e7e7;
+        font-size: 35px;
+        padding: 10px;
+        background: gray;
+        border-radius: 20px;
+}
+    .main .home{
+    width:100%;
+    background-color:aliceblue;
+    }
+    .main .home .header img{
+    width:100%;
+    height:100px;
+    }
+    .gallery {
+    width:100%;
+        max-width: 1200px;
+        margin: auto auto;
+        padding: 20px;
+    }
+     
+    .gallery h2 {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+     
+    .gallery-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+    }
+     
+    .gallery-item {
+        object-fit: cover;
+        border-radius: 8px;
+        overflow: hidden;
+        transition: transform 0.3s ease;
+    }
+     
+    .gallery-item:hover {
+        transform: scale(1.05);
+    }
+     
+    .gallery-item img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius:50% 50% 0 0 ;
+    border:1px solid gray;
+    }
+     
+    .gallery-item p {
+        padding: 10px;
+        text-align: center;
+        margin: 0;
+        background-color: #f8f8f8;
+    }
+   
+    .skils-contenr .skils-item .img-team a i{
+      max-width:100%;
+    max-height:100%;
+    }
