--- a/style/main.css
+++ b/style/main.css
@@ -128,18 +128,6 @@
     height: auto;
     width: 98%;
   }
-  
-  .small-text .p-mana::before {
-    content: '';
-    position: absolute;
-    height: 20px;
-    width: 20px;
-    border-bottom: 5px solid red;
-    border-left: 5px solid red;
-    bottom: 0;
-    left: 0;
-  }
-  
   .slider-container {
     width: 35%;
     height: 100vh;
@@ -158,7 +146,7 @@
     height: auto;
     max-height: 400px;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 10rem;
   }
   
   .prev, .next {
