--- a/style/main.css
+++ b/style/main.css
@@ -1,277 +1,284 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    outline: none;
-  }
-  
-  ::before, ::after { box-sizing: border-box; }
-  
-  html {
-    font-size: 62.5%;
-    overflow-x: hidden;
-  }
-  
-  html::-webkit-scrollbar {
-    width: 1rem;
-  }
-  
-  html::-webkit-scrollbar-track {
-    background: #0d0d0d;
-  }
-  
-  html::-webkit-scrollbar-thumb {
-    background: gray;
-    border-radius: 10rem;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  
-  body {
-    line-height: 1.5;
-    font-size: 16px;
-    font-family: 'popis', sans-serif;
-    margin: 0 auto;
-  }
-  
-  .main-header {
-    background-image: url(../img/home/logo.png*);
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    width: 100%;
-  }
-  
-  .container {
-    width: 100%;
-    background-color: #80808070;
-    height: 80px;
-    padding: 20px;
-    position: fixed;
-  }
-  
-  .main-header .container .menu {
-    float: left;
-    padding: 5px;
-  }
-  
-  .main-header .container .menu .nav-mine ul li {
-    display: inline-block;
-    margin: 5px;
-  }
-  
-  .main-header .container .menu .nav-mine ul li a {
-    color: #000;
-    font-size: 20px;
-    padding: 5px;
-    border-radius: 3px;
-  }
-  
-  .main-header .container .menu .nav-mine ul li a:hover {
-    color: gray;
-    background: #fff;
-  }
-  
-  .main-header .container .logo {
-    float: right;
-    padding: 1px;
-  }
-  
-  .main-header .container .logo img {
-    border-radius: 5px;
-  }
-  
-  .small-text {
-    margin: auto auto;
-    width: 60%;
-    height: 100vh;
-    padding: 200px;
-    float: left;
-    display: inline-block;
-    line-height: 2;
-    position: relative;
-  }
-  
-  .small-text .text-about {
-    font-size: 40px;
-    width: 100%;
-  }
-  
-  .small-text a {
-    font-size: 30px;
-    padding: 5px;
-    color: #fff;
-    background-color: gray;
-    border-radius: 5px;
-    text-align: center;
-  }
-  
-  .small-text a:hover {
-    color: gray;
-    background: #fff;
-  }
-  
-  .main {
-    margin: 60px 10px;
-    padding: 10px;
-    border-radius: 5px;
-    line-height: 2;
-    min-height: 400px;
-    height: auto;
-    width: 98%;
-  }
-  
-  .small-text .p-mana::before {
-    content: '';
-    position: absolute;
-    height: 20px;
-    width: 20px;
-    border-bottom: 5px solid red;
-    border-left: 5px solid red;
-    bottom: 0;
-    left: 0;
-  }
-  
-  .slider-container {
-    width: 35%;
-    height: 100vh;
-    float: right;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background-color: white;
-    border-radius: 5px;
-  }
-  
-  .slider-image {
-    width: 100%;
-    height: auto;
-    max-height: 400px;
-    object-fit: cover;
-    border-radius: 5px;
-  }
-  
-  .prev, .next {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: gray;
-    color: white;
-    border: none;
-    border-radius: 5px;
-  }
-  
-  .prev:hover, .next:hover {
-    background-color: darkgray;
-  }
-  @media (max-width: 768px) {
-    .footer-content {
-      flex-direction: column;
-    }
-  
-    .social-links {
-      margin-top: 15px;
-    }
-  
-    .copyright {
-      margin-top: 1rem;
-    }
-  }
-  footer {
-    background-color: bisque;
-    padding: 1rem;
-    position: relative;
-    width: 100%;
-    clear: both;
-  }
-  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  outline: none;
+}
+
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+html::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+html::-webkit-scrollbar-track {
+  background: white;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #344960;
+  border-radius: 10rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+body {
+  font-family: 'Courier New", Courier, monospace';
+  font-size: 16px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.main-header {
+  background-image: url(../img/home/logo.png*);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  background-color: #fbf3ee;
+  height: 80px;
+  padding: 20px;
+  position: fixed;
+  font-family: 'Courier New", Courier, monospace';
+}
+
+.main-header .container .menu {
+  float: left;
+  padding: 5px;
+}
+
+.main-header .container .menu .nav-mine ul li {
+  display: inline-block;
+  margin: 5px;
+}
+
+.main-header .container .menu .nav-mine ul li a {
+  color: #344960;
+  font-size: 20px;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.main-header .container .menu .nav-mine ul li a:hover {
+  color: #344960;
+  background: #fbf3ee;
+}
+
+.main-header .container .logo {
+  float: right;
+  padding: 1px;
+}
+
+.main-header .container .logo img {
+  border-radius: 5px;
+}
+
+.small-text {
+  margin: auto auto;
+  width: 60%;
+  height: 100vh;
+  padding: 200px;
+  float: left;
+  display: inline-block;
+  line-height: 2;
+  position: relative;
+}
+
+.small-text .text-about {
+  font-size: 40px;
+  width: 100%;
+  color: #344960;
+  font-family: 'Courier New", Courier, monospace';
+  font-size: 30px;
+  padding: 5px;
+  color: #344960;
+  background-color: white;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.small-text a:hover {
+  color: #344960;
+  background: #fbf3ee;
+}
+
+.main {
+  margin: 60px 10px;
+  padding: 10px;
+  border-radius: 5px;
+  line-height: 2;
+  min-height: 400px;
+  height: auto;
+  width: 98%;
+}
+
+.small-text .p-mana::before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+}
+
+.p-mana {
+  color: #344960;
+  margin-bottom: 100px;
+}
+.slider-container {
+  width: 35%;
+  height: 100vh;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.slider-image {
+  width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.prev,
+.next {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #c0a293;
+  color: #070a0d;
+  border: none;
+  border-radius: 10px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: #9e8172;
+}
+@media (max-width: 768px) {
   .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .logo-title {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-title img {
-    width: 9rem;
-  }
-  
-  .logo-title p {
-    margin-left: 10px;
-    color: darkslategray;
-    font-size: 1rem;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  .social-links {
-    display: flex;
-    gap: 15px;
-  }
-  
-  .social-links a {
-    color: darkslategray;
-    font-size: 24px;
-    transition: color 0.3s ease;
-  }
-  
-  .social-links a:hover {
-    color: #007bff;
-  }
-  
-  .copyright {
-    text-align: center;
-    margin-top: 1rem;
-    color: darkslategray;
-    font-size: 0.9rem;
-  }
-  
-  @media (max-width: 768px) {
-    .footer-content {
-      flex-direction: column;
-    }
-  
-    .social-links {
-      margin-top: 15px;
-    }
-  
-    .copyright {
-      margin-top: 1rem;
-    }
-  }
-  body, html {
-    height: 100%;
-    display: flex;
     flex-direction: column;
   }
-  
-  .main-header {
-    flex: 1;
+
+  .social-links {
+    margin-top: 15px;
   }
-  
-  .slider-container {
-    flex: 1;
+
+  .copyright {
+    margin-top: 1rem;
   }
-  
-  section {
-    flex: 1;
+}
+footer {
+  background-color: #fbf3ee;
+  position: relative;
+  padding-right: 3rem;
+  padding-left: 1rem;
+  margin-top: 1rem;
+  width: 100%;
+  clear: both;
+  height: 100px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-title {
+  display: flex;
+  align-items: center;
+}
+
+.logo-title img {
+  width: 150px;
+}
+
+.logo-title p {
+  margin-left: 1px;
+  color: #344960;
+  font-size: 1rem;
+  font-family: 'Courier New", Courier, monospace';
+}
+
+.social-links {
+  display: flex;
+  gap: 11px;
+}
+
+.social-links a {
+  color: #344960;
+  font-size: 28px;
+  transition: color 0.3s ease;
+}
+
+.social-links a:hover {
+  color: #090909;
+}
+
+.copyright {
+  text-align: center;
+  color: #344960;
+  font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
   }
-  
-  footer {
-    flex-shrink: 0;
+
+  .social-links {
+    margin-top: 10px;
   }
-  
+
+  .copyright {
+    margin-top: 0.5rem;
+  }
+}
+body,
+html {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-header {
+  flex: 1;
+}
+
+.slider-container {
+  flex: 1;
+}
+
+section {
+  flex: 1;
+}
+
+footer {
+  flex-shrink: 0;
+}
