--- a/style/ali.css
+++ b/style/ali.css
@@ -93,7 +93,7 @@ body {
 
 .small-text {
   margin: auto auto;
-  width: 60%;
+  width: 100%;
   height: 100vh;
   padding: 200px;
   float: left;
@@ -132,18 +132,21 @@ a:hover {
   height: auto;
   width: 98%;
 }
+
 .main .skills-content h1 {
   text-align: left;
   float: left;
   margin-top: -40px;
 }
+
 .skills-content ul li {
   text-align: left;
 }
+
 .main .left img {
   width: 200px;
   height: 200px;
-  border: 1px solid #0abcff;
+  border: 1px solid #344960;
   display: inline-block;
   margin: 0 auto;
   border-radius: 50%;
@@ -160,7 +163,7 @@ a:hover {
 .main .right {
   width: 70%;
   display: inline-block;
-  border-left: 1px solid gray;
+  border-left: 1px solid #344960;
   padding: 20px;
 }
 
@@ -177,6 +180,7 @@ a:hover {
 .main .skills-content p {
   text-align: center;
 }
+
 .skils {
   max-width: 10000px;
   margin: 0 auto;
