--- a/style/main.css
+++ b/style/main.css
@@ -51,11 +51,12 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   width: 100%;
+  max-height: 100vh;
 }
 
 .container {
   width: 100%;
-  background-color: white;
+  background-color: #fbf3ee;
   height: 80px;
   padding: 20px;
   position: fixed;
@@ -82,6 +83,7 @@ body {
 .main-header .container .menu .nav-mine ul li a:hover {
   color: #344960;
   background: #fbf3ee;
+  margin-bottom: 30px;
 }
 
 .main-header .container .logo {
@@ -94,32 +96,26 @@ body {
 }
 
 .small-text {
-  margin: auto auto;
+  margin: 50px 3px;
   width: 60%;
   height: 100vh;
-  padding: 200px;
+  padding: 20px;
   float: left;
   display: inline-block;
   line-height: 2;
   position: relative;
-}
-
-.small-text .text-about {
-  font-size: 40px;
-  width: 100%;
-  color: #344960;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 30px;
-  padding: 5px;
-  color: black;
-  background-color: white;
-  border-radius: 5px;
+  font-size: 20px;
   text-align: center;
 }
 
-.small-text a:hover {
+.small-text .text-about {
+  font-size: 20px;
+  width: 100%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding: 20px;
   color: #344960;
-  background: #fbf3ee;
+  text-align: center;
+  margin-top: 50px;
 }
 
 .main {
@@ -140,8 +136,7 @@ body {
 }
 
 .p-mana {
-  color: #344960;
-  margin-bottom: 100px;
+  color: #c45820;
 }
 .slider-container {
   width: 35%;
@@ -154,14 +149,17 @@ body {
   padding: 20px;
   background-color: white;
   border-radius: 10px;
+  text-align: center;
 }
 
 .slider-image {
   width: 100%;
-  height: auto;
+  height: 100vh;
   max-height: 400px;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 70% 30% 30% 25%;
+  border: 1px solid gray;
+  padding: 5px;
 }
 
 .prev,
@@ -170,8 +168,8 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #344960;
-  color: white;
+  background-color: #fbf3ee;
+  color: black;
   border: none;
   border-radius: 10px;
 }
@@ -198,10 +196,14 @@ footer {
   position: relative;
   padding-right: 3rem;
   padding-left: 1rem;
-  margin-top: 1rem;
+  margin-top: -90px;
   width: 100%;
   clear: both;
   height: 100px;
+}
+.copyright p {
+  margin-bottom: 20px;
+  margin-top: -20px;
 }
 
 .footer-content {
@@ -281,4 +283,5 @@ section {
 
 footer {
   flex-shrink: 0;
+  line-height: 1px;
 }
