--- a/style/main.css
+++ b/style/main.css
@@ -56,7 +56,7 @@ body {
 
 .container {
   width: 100%;
-  background-color: #fbf3ee;
+  background-color: white;
   height: 80px;
   padding: 20px;
   position: fixed;
@@ -169,7 +169,7 @@ body {
   font-size: 16px;
   cursor: pointer;
   background-color: #fbf3ee;
-  color: black;
+  color: #344960;
   border: none;
   border-radius: 10px;
 }
