--- a/style/abbas.css
+++ b/style/abbas.css
@@ -98,11 +98,9 @@ body {
   width: 100%;
   height: 100vh;
   padding: 150px;
-  float: left;
   display: inline-block;
   line-height: 2;
   background-size: cover;
-  background-image: url(../img/abbas/goldasht.jpg);
   background-position: center center;
   background-attachment: fixed;
 }
@@ -156,7 +154,6 @@ a:hover {
 
 .main .left {
   width: 20%;
-  float: left;
   display: inline-block;
   padding: 5px;
 }
@@ -308,7 +305,7 @@ a:hover {
   border-radius: 4px;
   font-size: 18px;
   cursor: pointer;
-  transition: 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 .submit-btn:hover {
   background-color: #344960;
@@ -385,7 +382,6 @@ a:hover {
   padding: 5px;
   border-radius: 5px;
   text-align: left;
-  float: left;
 }
 .main h2 {
   margin-top: -35px;
@@ -397,30 +393,31 @@ a:hover {
 .our-team-content {
   text-align: center;
 }
-
 .box2 {
-  text-align: center;
-  display: inline-block;
-  border: 1px solid #344960;
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  margin: 3px;
+  overflow: hidden;
+  margin: 10px;
+  display: inline-block;
+  position: relative;
 }
 .box2:hover {
-  border: none;
   width: 130px;
   height: 130px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .box2 img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.box2 img:hover {
+.box2:hover img {
   width: 130px;
   height: 130px;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 8px;
 }
 
 .about {
