--- a/style/ali.css
+++ b/style/ali.css
@@ -377,8 +377,7 @@ a:hover {
 }
 
 .main h1 {
-  margin-top: -50px;
-  display: inline-block;
+  margin-top: -5rem;
   padding: 5px;
   border-radius: 5px;
   text-align: left;
